Refactor cache stratgey (#9)
* Refactor cache in company
* Refactor cache in profile
* Refactor cache in user
